--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=order-service
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/order-service
 spring.datasource.username=postgres
@@ -6,4 +7,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-server.port=8081
+server.port=0
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
