--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.jpa.show-sql=true
 server.port=0
 
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
+
+spring.zipkin.base-url=http://localhost:9411
+management.tracing.enabled=true
+management.tracing.sampling.probability=1.0
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
