--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.application.name=product-service
 spring.data.mongodb.uri=mongodb://localhost:27017/product-service
 server.port=0
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
+
+spring.zipkin.base-url=http://localhost:9411
+management.tracing.enabled=true
+management.tracing.sampling.probability=1.0
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
