--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -4,3 +4,6 @@ eureka.client.fetch-registry=false
 server.port=8761
 eureka.username=eureka
 eureka.password=password
+
+# Actuator Prometheus Endpoint
+management.endpoints.web.exposure.include=prometheus
