--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.zipkin.base-url=http://localhost:9411
 management.tracing.enabled=true
 management.tracing.sampling.probability=1.0
 logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+
+# Actuator Prometheus Endpoint
+management.endpoints.web.exposure.include=prometheus
